--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monopoly</title>
     <!--<script src="app.js"></script>-->
-    <script src="app_updates.js" type="module"></script>
+    <!--<script src="app_updates.js" type="module"></script>-->
+    <script src="move.js"></script>
 </head>
 <body>
     <!-- player 1 and player2 button action-->
-    <button id="player1">PLayer1</button>
-    <button id="player2">Player2</button>
+    <div class="container" id="main">
+<div class="box" id="box1"></div>
+<div class="box" id="box2"></div>
+<div class="box" id="box3"></div>
+<div class="box" id="box4"></div>
+<div class="box" id="box5"></div>
+<div class="box" id="box6"></div>
+<div class="box" id="box7"></div>
+<div class="box" id="box8"></div>
+<div class="box" id="box9"></div>
+<div class="box" id="box10"></div>
+<div class="box" id="box11"></div>
+<div class="box" id="box12"></div>
+<div class="box" id="box13"></div>
+<div class="box" id="box14"></div>
+<div class="box" id="box15"></div>
+<div class="box" id="box16"></div>
+    </div>
+    <footer>
+        <button id="player1">PLayer1</button>
+        <button id="player2">Player2</button>
+    </footer>
+    
     
 </body>
 </html>
